ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.6.12, 4.0.9, 4.1.10
    • Affects Version/s: None
    • Component/s: Logging
    • None
    • Fully Compatible
    • ALL
    • v4.0, v3.6
    • Hide

      The format string passed to _snprintf is "0x%llux". The 'u' and 'x' are mutally exclusive. Since the output is expected to be a hexadecimal number, the correct string is "0x%llx".

       
       
       
       
       
       
       
       

      Show
      The format string passed to _snprintf is "0x%llux". The 'u' and 'x' are mutally exclusive. Since the output is expected to be a hexadecimal number, the correct string is "0x%llx".                
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The following line reports incorrect stacktrace information due to an incorrect formatting string.

      src/mongo/util/stacktrace_windows.cpp:224

      _snprintf(symbolOffset.get(), bufferSize, "+"0x%llux", displacement64);

      The format string should be "0x%llx"

            Assignee:
            John Festa (Inactive)
            Reporter:
            John Festa (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: