SERVER-40131 Incorrect format string in Windows stacktrace generator